gitops/apps/bank-of-anthos/overlays/gcp-dr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-dr
  labels:
    application: bank-of-anthos
    environment: gcp-dr
