gitops/apps/bank-of-anthos/overlays/gcp-dr/frontend-neg-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
